# based_os

./: Cargo.toml  README.md
.cargo/: config.toml
src/: interrupts.rs  lib.rs  main.rs  qemu.rs  serial.rs  test.rs  vga_buffer.rs  volatile.rs
tests/: basic_boot.rs
